<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <TextView android:text="@string/my_title" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:textSize="@dimen/abc_text_size_headline_material"
        android:textIsSelectable="false"
        android:textColor="@color/abc_primary_text_material_light"
        android:id="@+id/textView" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/media_streamer"
        android:id="@+id/button_streamer"
        android:layout_below="@+id/textView"
        android:layout_marginTop="@dimen/abc_text_size_headline_material"
        android:paddingTop="@dimen/abc_button_padding_vertical_material"
        android:paddingBottom="@dimen/abc_button_padding_vertical_material"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginBottom="@dimen/abc_button_padding_vertical_material"
        android:backgroundTint="#c5cae9"
        android:onClick="onStreamerClicked" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/super_duo1"
        android:id="@+id/button_super_duo1"
        android:layout_below="@+id/button_streamer"
        android:layout_marginTop="@dimen/abc_button_padding_vertical_material"
        android:paddingTop="@dimen/abc_button_padding_vertical_material"
        android:paddingBottom="@dimen/abc_button_padding_vertical_material"
        android:layout_alignLeft="@+id/button_streamer"
        android:layout_alignStart="@+id/button_streamer"
        android:layout_alignRight="@+id/button_streamer"
        android:layout_alignEnd="@+id/button_streamer"
        android:layout_marginBottom="@dimen/abc_button_padding_vertical_material"
        android:backgroundTint="#c5cae9"
        android:onClick="onSuperDuo1Clicked" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/super_duo2"
        android:id="@+id/button_super_duo2"
        android:layout_below="@+id/button_super_duo1"
        android:layout_marginTop="@dimen/abc_button_padding_vertical_material"
        android:paddingTop="@dimen/abc_button_padding_vertical_material"
        android:paddingBottom="@dimen/abc_button_padding_vertical_material"
        android:layout_alignLeft="@+id/button_streamer"
        android:layout_alignStart="@+id/button_streamer"
        android:layout_alignRight="@+id/button_streamer"
        android:layout_alignEnd="@+id/button_streamer"
        android:layout_marginBottom="@dimen/abc_button_padding_vertical_material"
        android:backgroundTint="#c5cae9"
        android:onClick="onSuperDuo2Clicked" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ant_terminator"
        android:id="@+id/button_ant_terminator"
        android:layout_below="@+id/button_super_duo2"
        android:layout_marginTop="@dimen/abc_button_padding_vertical_material"
        android:paddingTop="@dimen/abc_button_padding_vertical_material"
        android:paddingBottom="@dimen/abc_button_padding_vertical_material"
        android:layout_alignLeft="@+id/button_streamer"
        android:layout_alignStart="@+id/button_streamer"
        android:layout_alignRight="@+id/button_streamer"
        android:layout_alignEnd="@+id/button_streamer"
        android:layout_marginBottom="@dimen/abc_button_padding_vertical_material"
        android:backgroundTint="#c5cae9"
        android:onClick="onAntTerminatorClicked" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/materialize"
        android:id="@+id/button_materialize"
        android:layout_below="@+id/button_ant_terminator"
        android:layout_marginTop="@dimen/abc_button_padding_vertical_material"
        android:paddingTop="@dimen/abc_button_padding_vertical_material"
        android:paddingBottom="@dimen/abc_button_padding_vertical_material"
        android:layout_alignLeft="@+id/button_streamer"
        android:layout_alignStart="@+id/button_streamer"
        android:layout_alignRight="@+id/button_streamer"
        android:layout_alignEnd="@+id/button_streamer"
        android:layout_marginBottom="@dimen/abc_button_padding_vertical_material"
        android:backgroundTint="#c5cae9"
        android:onClick="onMaterializeClicked" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:id="@+id/button_capstone"
        android:layout_below="@+id/button_materialize"
        android:layout_marginTop="@dimen/abc_button_padding_vertical_material"
        android:paddingTop="@dimen/abc_button_padding_vertical_material"
        android:paddingBottom="@dimen/abc_button_padding_vertical_material"
        android:layout_alignLeft="@+id/button_streamer"
        android:layout_alignStart="@+id/button_streamer"
        android:layout_alignRight="@+id/button_streamer"
        android:layout_alignEnd="@+id/button_streamer"
        android:layout_marginBottom="@dimen/abc_button_padding_vertical_material"
        android:backgroundTint="#5c6bc0"
        android:textColor="@color/button_material_light"
        android:onClick="onCapstoneClicked" />

</RelativeLayout>
